# option

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  check_publish.py  genindex.html  index.html  modules.html  objects.inv  option.html  publish.py  py-modindex.html  pyproject.toml  search.html  searchindex.js
.circleci/: config.yml
_modules/: index.html
_modules/option/: option_.html  result.html  types_.html
_sources/: index.rst.txt  modules.rst.txt  option.rst.txt
_static/: documentation_options.js
docs/: conf.py  genindex.html  index.html  modules.html  objects.inv  option.html  option.rst  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/option/: option_.html  types_.html
docs/_sources/: option.rst.txt
docs/_static/: alabaster.css  documentation_options.js  jquery-3.2.1.js  jquery.js  searchtools.js  underscore-1.3.1.js
option/: __init__.py  option.py  option_.py  result.py  types_.py
tests/: __init__.py  conftest.py  test_flatmap.py  test_option.py  test_result.py
