[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "option"
version = "2.1.0"
description = "Rust like Option and Result types in Python"
authors = ["Peijun Ma <peijun.ma@protonmail.com>"]
readme = "README.md"
license = "MIT"
repository="https://github.com/MaT1g3R/option"
homepage="https://mat1g3r.github.io/option/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

include = ['option/py.typed', 'option/**/*.py', 'LICENSE']

[tool.poetry.dependencies]
python = ">=3.7,<4"
typing-extensions = { version = ">=4.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
Sphinx = "^4.5.0"
pylint = "^2.13.3"
bump2version = "^1.0.0"

[tool.mypy]
strict = true
show_column_numbers = true
show_error_codes = true
